# go2-ros2

./: .gitignore
src/go2_description/: CMakeLists.txt  package.xml
src/go2_description/launch/: check_joint_rviz2.rviz  gazebo.launch.py  go2_rviz2.launch.py
src/go2_description/scripts/: check_joints.sh  check_package_paths.py  monitor_sync.sh
