<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelayout="1.0"?>
<package format="3">
  <name>go2_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for go2_description</p>
    <p>This package contains configuration data, 3D models and launch files for go2_description robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>
  
  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- ROS2核心依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <!-- 机器人状态发布与URDF -->
  <depend>robot_state_publisher</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  
  <!-- 可视化工具 (ROS2版本) -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  
  <!-- Ignition Gazebo (Gazebo Sim) 集成与桥接 -->
  <!-- 注意：ROS2 Humble 对应的是 ros_gz 软件包 -->
  <depend>ros_gz</depend>
  <depend>ros_gz_bridge</depend>
  <!-- 可能还需要其他 ros_gz 系列包，如 ros_gz_sim, ros_gz_image 等，根据实际需求添加 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
